--- a/bibliography.bib
+++ b/bibliography.bib
@@ -1,10 +1,6 @@
 
 @STANDARD{stUds,
-  author = {Alan Author},
-  title = {Road vehicles — Unified diagnostic
-services (UDS) —
-Part 1:
-Specification and requirements},
+  title = {Road vehicles — Unified diagnosticservices (UDS) —Part 1:Specification and requirements},
   type = {ISO},
   number = {14229-1},
   year = {2013}
@@ -19,11 +15,50 @@ language="russian"
 }
 
 @book{conceptPL,
-author="Себеста Роберт У.",
-title="An Introduction to Cybernetics",
-year=1959,
-pages="432 с.",
+author="Р.У. Себеста",
+title="Основные концепты языков программирования",
+year=2001,
+pages="670 с.",
 language="russian"
+}
+
+
+@article{wwwXLDriverLib,
+title    = {XL-Driver-Library},
+url  = {https://www.vector.com/int/en/products/products-a-z/libraries-drivers/xl-driver-library/},
+year = {2019}, 
+}
+
+@article{Capl,
+title    = {Quick Introduction To CAPL },
+author = {Bruce Emaus},
+year = {2003}   , 
+}
+
+@article{CCLD,
+title    = {CCDL: The Composable Components Description Language},
+url  = {https://www.razorcat.com/en/product-ccdl.html/},
+year = {2019}, 
+}
+
+@article{Cucumber,
+title    = {Cucumber. Introduction},
+url  = {https://cucumber.io/docs/guides/overview/},
+year = {2019}, 
+}
+
+
+@article{BDD,
+author = {Dan North},
+journal = { Better Software},
+title    = {The evolution of behavior-driven development},
+year = {2006}, 
+}
+
+@article{Gherkin,
+title    = {Gherkin Syntax},
+url  = {https://cucumber.io/docs/gherkin/},
+year = {2019}, 
 }
 
 @book{Beyzer2004,
@@ -39,10 +74,18 @@ language="russian"
 @book{JavaTom1,
 author="Хорстманн, Кей С.",
 title="Java. Библиотека профессионала, том 1. Основы",
-address="Питер",
 publisher="ИД Вильямс",
 year=2017,
 pages="864 с.",
 language="russian"
 }
 
+
+@book{EvansE,
+author="Эванс Эрик",
+title="Предметно-ориентированное проектирование",
+publisher="Вильямс",
+year=2010,
+pages="448 с.",
+language="russian"
+}
