--- a/main.tex
+++ b/main.tex
@@ -118,7 +118,7 @@ AST& Abstract syntax tree\\
 Для достижения поставленной цели следует выполнить ряд задач.
 \begin{itemize}
 \itemИсследовать предметную область.
-\itemВыделить аналоги и сравнить аналоги существующих инструментов для тестирования, позволяющих проверить качество программного обесчечения автомобильной системы.
+\itemВыделить и сравнить аналоги существующих инструментов для тестирования, позволяющих проверить качество программного обесчечения автомобильной системы.
 \itemРазработать проблемно-ориентированный язык для написания тестовых сценариев.
 \itemРеализовать язык.
 \itemПротестировать реализацю языка, а так же изучить такие аспекты языка, как удобство использования языка и эффективность разработки и сопровождения тестовых сценариев, разрабатываемых на этом языке.
@@ -147,14 +147,14 @@ Unified Diagnostic Service (UDS) - автомобильный протокол, который позволяет диа
 \end{itemize}
 
 
-Одно и то же оборудование, разрабатываемое для разных автомобильных компаний с различной внутренней архитектурой программного обеспечения при тестировании ПО может рассматриваться в качестве «черного ящика». Данное понятие предложил У.Р. Эшби в своей книге «Введение в кибернетику». Под черным ящиком подразумевается объект исследования, внутреннее устройство которого неизвестно. В кибернетических системах оно помогает изучать поведение систем, абстрагируясь от их внутреннего устройства. Такое тестирование называется поведенческим. В этом случае проверяется функциональное поведение объекта с точки зрения внешнего мира. Под этой стратегией понимается создание тестов для тестового набора, основанных на технических требованиях и их спецификациях. Фактически, при поведенческом тестировании известно какой результат должен быть при определенном наборе данных, которые подаются на вход. Проанализировав требования и спецификации тестировщик может легко определить набор тестовых сценариев для проверки различной функциональности тестируемой системы. Принимая тестируемую систему в качестве черного ящика ее можно исследовать, манипулируя входными данными и данными, полученными на выходе. Чтобы лучше понять, как исследуется поведение  черного ящика'', предположим что имеется некоторая система управления, внутреннее устройство которой неизвестно для пользователя. Эта система управления имеет входы $X(x_1, x_2, ..., x_n)$ и выходы $Y(y_1, y_2, ..., y_n)$. Способ исследования поведения данной системы заключается в том, что выходы системы зависят от входов системы и времени $t_k, k \in \mathbb{Z}$. При этом величины времени выбираются произвольно (рис. \ref{fblackbox}) .
+Одно и то же оборудование, разрабатываемое для разных автомобильных компаний с различной внутренней архитектурой программного обеспечения при тестировании ПО может рассматриваться в качестве «черного ящика». Данное понятие предложил У.Р. Эшби в своей книге «Введение в кибернетику»\cite{Eshby1959}. Под черным ящиком подразумевается объект исследования, внутреннее устройство которого неизвестно. В кибернетических системах оно помогает изучать поведение систем, абстрагируясь от их внутреннего устройства. Такое тестирование называется поведенческим. В этом случае проверяется функциональное поведение объекта с точки зрения внешнего мира. Под этой стратегией понимается создание тестов для тестового набора, основанных на технических требованиях и их спецификациях. Фактически, при поведенческом тестировании известно какой результат должен быть при определенном наборе данных, которые подаются на вход. Проанализировав требования и спецификации тестировщик может легко определить набор тестовых сценариев для проверки различной функциональности тестируемой системы. Принимая тестируемую систему в качестве черного ящика ее можно исследовать, манипулируя входными данными и данными, полученными на выходе. Чтобы лучше понять, как исследуется поведение  ``черного ящика'', предположим что имеется некоторая система управления, внутреннее устройство которой неизвестно для пользователя. Эта система управления имеет входы $X(x_1, x_2, ..., x_n)$ и выходы $Y(y_1, y_2, ..., y_n)$. Способ исследования поведения данной системы заключается в том, что выходы системы зависят от входов системы и времени $t_k, k \in \mathbb{Z}$. При этом величины времени выбираются произвольно (рис. \ref{fblackbox}) .
 
 \begin{Figure}{Исследование поведения черного ящика''}{fblackbox}
 {\includegraphics[width=\linewidth]{res/blackBox}}
 \label{fig:image}
 \end{Figure}
 
-В марте 2006 года Д. Норт предложил методологию BDD (behaviour-driven development), основанную на гибкой методологии разработки. BDD является своего рода расширением техники разработки программного обеспечения через тестирование (test-driven development, TDD). Идея BDD подхода была в том, что в процессе написания требования для разрабатываемого ПО аналитики должны описать тестовые сценарии таким образом, чтобы их смог понять и разработчик, и тестировщик, и заказчик. При этом тестовые сценарии состоят из набора заранее обговоренных предложений.
+В марте 2006 года Д. Норт предложил методологию BDD (behaviour-driven development), основанную на гибкой методологии разработки. BDD является своего рода расширением техники разработки программного обеспечения через тестирование (test-driven development, TDD) \cite{BDD}. Идея BDD подхода была в том, что в процессе написания требования для разрабатываемого ПО аналитики должны описать тестовые сценарии таким образом, чтобы их смог понять и разработчик, и тестировщик, и заказчик. При этом тестовые сценарии состоят из набора заранее обговоренных предложений.
 В своей статье Dan North описал следующие BDD идеи:
 
 \begin{itemize}
@@ -166,16 +166,16 @@ Unified Diagnostic Service (UDS) - автомобильный протокол, который позволяет диа
 \itemПриемочные критерии должны быть выполняемыми.
 \end{itemize}
 
-Почти в то же время Эрик Эванс опубликовал книгу «Проблемно-ориентированное проектирование», в которой описал набор принципов и схем, направленных на создание оптимальных систем объектов. Его идея заключается в том, что для бизнеса удобно смоделировать систему, в которой будет определен единый язык (Domain specific language), основанный на бизнес области, такой, что бизнес словарь смогут использовать как менеджеры так и инженеры.
+Почти в то же время Эрик Эванс опубликовал книгу «Предметно-ориентированное проектирование»\cite{EvansE}, в которой описал набор принципов и схем, направленных на создание оптимальных систем объектов. Его идея заключается в том, что для бизнеса удобно смоделировать систему, в которой будет определен единый язык (Domain specific language), основанный на бизнес области, такой, что бизнес словарь смогут использовать как менеджеры так и инженеры.
 
-Совместно Эрик Эванс и Dan North разработали шаблон для выявления приемочных критериев теста. Они разработали структуры тестовых сценариев, в которых каждый шаг определялся ключевым словом
+Совместно Эрик Эванс и Д.Норт разработали шаблон для выявления приемочных критериев теста. Они разработали структуры тестовых сценариев, в которых каждый шаг определялся ключевым словом
 \begin{itemize}
 \item    Given – дано начальное условие
 \item    When – происходит событие
 \item    Then – проверка, что получены некоторые результаты
 \end{itemize}
 
-На основе вышеперечисленных принципов BDD был создан язык Gherkin – человеко-читаемый язык, используемый для описания поведения системы.
+На основе вышеперечисленных принципов BDD был создан язык Gherkin \cite{Gherkin} – человеко-читаемый язык, используемый для описания поведения системы.
 
 С точки зрения автомобильной индустрии, в которых функциональное тестирование ПО подразумевает достаточно нетривиальную задачу данный подход сильно облегчает взаимодействие между всеми бизнес участниками. Однако не существует инструмента облегчающего разработку документации, а как следствия взаимопонимания между менеджерами и инженерами и, в то же время, учитывающего особенности данной сферы.
 
@@ -228,13 +228,13 @@ Unified Diagnostic Service (UDS) - автомобильный протокол, который позволяет диа
 {\includegraphics[width=\linewidth]{res/Capl}}
 \label{fig:image}
 \end{Figure}
-CAPL - процедурный язык, на котором выполнение блоков программы управляются событиями. Эти блоки программы упоминаются как событие процедуры.
+CAPL - процедурный язык, на котором выполнение блоков программы управляются событиями. Эти блоки программы упоминаются как событие процедуры \cite{Capl}.
 
 С помощью CAPL можно описать тесты, полностью покрывающие функциональные требования АС. Однако данный язык является Си подобным, достаточно трудным для понимания менеджерами и аналитиками.
 
 \item CCDL
 
-Еще одним языком для описания тестовых спецификаций в автомобильной сфере является CCDL. Это язык тестовых спецификаций для тестирования, основанном на требованиях. Предоставляет высокоуровневый язык тестирования. CCDL может использоваться для автоматизированного black box тестирования. Однако, спецификации содержат в себе программный код, непонятный для части бизнес участников (рис. \ref{fccdl}).
+Еще одним языком для описания тестовых спецификаций в автомобильной сфере является CCDL. Это язык тестовых спецификаций для тестирования, основанном на требованиях \cite {CCLD}. Предоставляет высокоуровневый язык тестирования. CCDL может использоваться для автоматизированного black box тестирования. Однако, спецификации содержат в себе программный код, непонятный для части бизнес участников (рис. \ref{fccdl}).
 
 \begin{Figure}[h!]{Тестовый сценарий на языке CCDL}{fccdl}
 {\includegraphics[width=\linewidth]{res/CAPL-EX}}
@@ -248,7 +248,7 @@ CAPL - процедурный язык, на котором выполнение блоков программы управляются собы
 \label{fig:image}
 \end{Figure}
 
-Cucumber – это фреймворк, реализующий подход BDD. В Cucumber для разработки тестов используется Gherkin-нотация. Она определяет набор ключевых слов и структуру теста. Пример тестового сценария, написанного с помощью Cucumber приведена на рис. \ref{fcucumber1} Программная реализация шагов отделена от теста (рис. \ref{fcucumber2}), что очень удобно для бизнеса. Однако для создания полной domain specific модели АС необходимо каждый раз заново реализовывать протокол коммуникации с тестовым оборудованием.
+Cucumber – это фреймворк, реализующий подход BDD \cite{Cucumber}. В Cucumber для разработки тестов используется Gherkin-нотация. Она определяет набор ключевых слов и структуру теста. Пример тестового сценария, написанного с помощью Cucumber приведена на рис. \ref{fcucumber1} Программная реализация шагов отделена от теста (рис. \ref{fcucumber2}), что очень удобно для бизнеса. Однако для создания полной domain specific модели АС необходимо каждый раз заново реализовывать протокол коммуникации с тестовым оборудованием.
 
 
 \begin{Figure}[h!]{Реализация шага Cucumber}{fcucumber2}
@@ -283,8 +283,7 @@ Cucumber – это фреймворк, реализующий подход BDD. В Cucumber для разработки тест
 Качество решения, представленного в данной работе должно быть проверено следующим образом:
 \begin{itemize}
 \itemнеобходимо провести опрос среди потенциальных пользователей языка для выявления степени удобства \itemиспользования синтаксиса.
-\itemвыполнить unit-тестирование реализации языка.
-\itemвыполнить функциональное тестирование реализации языка, чтобы убедиться, что используемый язык предоставляет возможность отправлять данные на тестируемое устройство и получать данные с него.
+\itemвыполнить тестирование реализации языка.
 \end{itemize}
 %------------------------------------Теоретическая часть. Разработка языка
 \chapter{Платформа тестирования}
@@ -527,6 +526,7 @@ ANTLR4 удобен для работы с AST, является свободным программным обеспечением, пре
 
 %-------------------------------------ЛЕКСЕР
 \section{Лексический анализатор}
+\label{lexer}
 Предметно-ориентированный язык для описания тестовых сценариев автомобильных систем должен позволять описывать следующие виды инструкций, необходимых для описания входных и выходных данных:
 \begin{itemize}
 \itemОтправить кадр, сигнал или набор данных по UDS протоколу на тестируемое ПО;
@@ -738,13 +738,16 @@ BddParser.tokens, BddLexer.tokens — это вспомогательные классы, которые содержат
 
 Во время обхода абстрактного синтаксического дерева необходимо по тексту инструкции, следующим после ключевого слова, находить и выполнять метод, определенный в пользовательской библиотеке CommandLib. Как обсуждалось в разделе \label{sSemanthAnalysis}, в java такая возможность может быть достигнута благодаря Reflection API. Рефлексия позволяет производить анализ функциональных возможностей классов. Пакет java.lang.reflection содержит классы Field, Method и Constructor, соответственно описывающие поля, методы и конструкторы класса. Метод getMethods() возвращает массив открытых методов, принадлежащих анализируемому классу\cite{JavaTom1}. В данном случае анализироваться должен класс пользовательской библиотеки CommandLib.java.
 
+
+За поиск метода, соответствующего тестовому шагу отвечает класс CommandHandler.java. В конструктор этого класса передается ключевое слово, текст инструкции и пользовательская бибилиотека, на основе которых производится поиск метода, аннотированный заданным ключевым словом и имеющего указанную текстовую инструкцию. Главный функционал этого класса предоставляют методы isMethodPresent(), возвращающий булевское значение false, в слечае если подходящего метода не обнаружено, и getMethodConsumer(), возвращающий объект типа Consumer<Boolean>. Функциональный интерфейс  Consumer<T> выполняет некоторое действие над объектом типа T, при этом ничего не возвращая. В getMethodConsumer() с помощью рефлексии указываются параметры метода в соотствествии с параметрами текстовой инфструкции, и на основе полученных данных возвращается объект типа Consumer, который отвечает за выполнение найденного метода с заданными параметрами. 
+
 При обходе абстрактного синтаксического дерева компилятор находит очередную нотированную инструкцию, с помощью рефлексии находит метод, аннотированный соответствующим ключевым словом и добавляет ее в список необходимых для выполнения. При этом инструкция должна быть заранее определена пользователем в библиотеке инструкций. Во время семантического анализа все параметры пользовательских параметров приводятся к типам, объявленным в параметрах метода. Методы инcтрукций могут принимать параметры следующих типов: boolean, byte, short, integer, long, float, double, String, Enum.
 
 При завершении обхода AST инструкции поочередно выполняются в том порядке, в котором были заданы в тестовой спецификации.
 
 \lstinputlisting[caption=Пример реализации пользовательской инструкции с аннотацией Send,language=java, label={lst:annotatoinExample1}]{res/annotatoinExample.txt}
 
-Для реализации функционала симуляции автомобильных сетей используется XL-Driver-Library. XL-Driver-Library -- это универсальный программный интерфейс, позволяющий получить доступ к интерфейсам аппаратных средств Vector. Он поддерживает следующие шины:
+Для реализации функционала симуляции автомобильных сетей используется универсальный программный интерфейс  XL-Driver-Library, позволяющий получить доступ к интерфейсам аппаратных средств Vector \cite{wwwXLDriverLib}. Он поддерживает следующие шины:
 \begin{itemize}
 \item CAN / CAN FD
 \item LIN
@@ -761,13 +764,15 @@ XL-Driver-Library предоставляет общие и шинно-специфичные методы, которые облегч
 
 Java Native Interface (JNI) — стандартный механизм для запуска кода, под управлением виртуальной машины Java (JVM), который написан на языках С/С++ или Ассемблера, и скомпонован в виде динамических библиотек, позволяет не использовать статическое связывание. Это даёт возможность вызова функции С/С++ из программы на Java, и наоборот.
 
+Результаты выполнения тестовых сценариев записываются в текстовый файл results.txt.
+
 %----------------------Архитектура системы
 %\section{Архитектура системы}
 %Псевдокоды или блок-схемы основных алгоритмов, основные структуры данных и др.
 
 Ниже представлена диаграмма классов интерпретатора.
 
-\begin{figure}[h]
+\begin{figure}[h!]
 \center{\includegraphics[width=\linewidth]{res/ClassDiagram}}
 \caption{Диаграмма классов}
 \label{fig:image}
@@ -787,33 +792,19 @@ Java Native Interface (JNI) — стандартный механизм для запуска кода, под управле
 %--------------------------------------Обработчик ошибок
 \section{Обработчик ошибок}
 Важной способностью каждого парсера является обработка ошибок.
-В случае, если исходный текст не соответствует синтаксическим правилам языка, необходимо корректно реагировать на некорректную цепочку лексем. В этом случае можно завершить синтаксический анализ и вывести сообщение об ошибке, либо попробовать за одну попутку синтаксического анализа найти как можно больше ошибок.
+В случае, если исходный текст не соответствует синтаксическим правилам языка, необходимо корректно реагировать на некорректную цепочку лексем. В этом случае можно завершить синтаксический анализ и вывести сообщение об ошибке, либо попробовать за одну попытку синтаксического анализа найти как можно больше ошибок.
 
-%TODO: описать мой обработчик
 
 В ANTLR существуют следующие типы ошибок парсинга:
 \begin{itemize}
 \itemошибка распознавания токена (Lexer no viable alt); единственная существующая лексическая ошибка, обозначающая отсутствие правила для формирования токена из существующей лексемы.
-
-%class # { int i; } — здесь такой лексемой является #.
-
 \itemотсутствующий токен (Missing token); в этом случае ANTLR вставляет в поток токенов отсутствующий токен, помечает, что его не хватает, и продолжает парсинг.
-
-%class T { int f(x) { a = 3 4 5; } } — здесь такой токен это } в конце;
-
 \itemлишний токен (Extraneous token). Генератор помечает, что токен ошибочный и продолжает парсинг дальше.
-%class T ; { int i; }
-
 \itemнесовместимая входная цепочка (Mismatched input). При этом включается «режим паники», цепочка входных токенов игнорируется, а парсер ожидает токена из синхронизирующего множества.
-
-%class T { int f(x) { a = 3 4 5; } }
-
 \itemотсутствующая альтернатива (No viable alternative input). Данная ошибка описывает все остальные возможные ошибки парсинга.
-
-%class T { int ; }
-
 \end{itemize}
-Для обработки ошибок используется класс ThrowingErrorListener, наследуемый от BaseErrorListener. BaseErrorListener предоставляет пустую имплементацию интерфейса ANTLRErrorListener. Реализация каждого метода по умолчанию ничего не делает, но может быть переписана в наследнике по мере необходимости. Для обработки синтаксических ошибок используется метод syntaxError, уведомляющий в какой строке и на какой позиции в строке возникла ошибка и ее причину.
+
+Для обработки ошибок используется класс ThrowingErrorListener.java, наследуемый от BaseErrorListener.java. BaseErrorListener.java предоставляет пустую имплементацию интерфейса ANTLRErrorListener. Реализация каждого метода по умолчанию ничего не делает, но может быть переписана в наследнике по мере необходимости. Для обработки синтаксических ошибок используется метод syntaxError, уведомляющий в какой строке и на какой позиции в строке возникла ошибка и ее причину.
 
 На листинге \ref{lst:ErrorExample1} представлен пример тестового сценария с синтаксической ошибкой: на 9 строке после ключевого слова не указана текстовая инструкция. В этом случае ThrowingErrorListener должен сообщить о синтаксической ошибке (листинг \ref{lst:ErrorExampleRes1}).
 \lstinputlisting[caption=Пример тестового сценария с синтаксической ошибкой, language=java,  firstline=1,  lastline=10 , label={lst:ErrorExample1}]{res/ErrorExample.txt}
@@ -844,16 +835,27 @@ Java Native Interface (JNI) — стандартный механизм для запуска кода, под управле
 %Проверка адекватности модели, сравнение с существующими аналогами, выбор
 %представительного множества тестов, анализ результатов испытаний.
 
-Для тестирования реализованного языка были разработаны Unit тесты. Модульное тестирование, оно же юнит-тестирование, позволяет проверить корректность отдельных модулей исходного кода программы.
+Для тестирования реализованного языка были разработаны Unit тесты. Модульное тестирование, оно же юнит-тестирование, позволяет проверить корректность отдельных модулей исходного кода программы. Для этого было реализовано восемь junit-тестов с ипользованием пакета org.junit. Были проверены следующие тестовые случаи:
+
+\begin{enumerate}
+\itemв качестве параметра для паузы указано не целочисленное значение, а текст;
+\itemзначение для паузы не указано;
+\itemзначение значение для паузы указано верно, в следующем шаге значение для паузы не указано;
+\itemне указана текстовая инструкция после ключевого слова @Send;
+\itemне указана текстовая инструкция после ключевого слова @Send, далее указан корректный шаг;
+\itemне указана текстовая инструкция после ключевого слова @Set, далее указан корректный шаг (листинг \ref{lst:testSetEmptyInstruction});
+\itemуказаны две корректные инструкции на одной и той же строке (листинг \ref{lst:testTwoInstructionsInTheSameLine});
+\itemуказан шаг, тестовая инструкция для которого не определена в тестовой бибилиотеке;
+\end{enumerate}
 
 % \ref{lst:label}
 
 \lstinputlisting[caption=входные данные для теста testTwoInstructionsInTheSameLine, language=java,  firstline=2,  lastline=9 , label={lst:testTwoInstructionsInTheSameLine}]{res/testTwoInstructionsInTheSameLine.txt}
 
-\lstinputlisting[caption=входные данные для теста testSetEmptyInstruction, language=java,  firstline=13,  lastline=22, label={lst:testTwoInstructionsInTheSameLine} ]{res/testTwoInstructionsInTheSameLine.txt}
+\lstinputlisting[caption=входные данные для теста testSetEmptyInstruction, language=java,  firstline=13,  lastline=22, label={lst:testSetEmptyInstruction} ]{res/testTwoInstructionsInTheSameLine.txt}
 
-Результат выполнения тестовых сценариев приведен на рисунке. %TODO add ref %
 Сводная информация представлена в спецификации для разработанного синтаксического анализатора и результаты выполнения тестов (таблица \ref{tTestSpecification}). В первой колонке указано название теста, во второй ошибка, ожидаемая в результате выполнения синтаксического анализа. В третьей колонке указан статус теста: в случае, если тест пройден успешно указывается статус Passed, иначе -- Failed.
+
 
 
 
@@ -881,12 +883,36 @@ InstructionIsNotDeclared&Instruction 'request [] in functional addressing mode' 
 \end{tabular}
 \end{Table}
 
-
-
-
-
 В результате тестирования выявлено, что интерпретатор работает корректно.
-%\section{Примеры применения метода или программы}
+
+\section{Результаты опроса потенциальных пользователей}
+
+По мнению автора книги \cite{conceptPL} разработать краткий, но доступный по описанию язык – задача сложная, решение которой необходимо для успешного использования языка. Одной из пролем возникающих во время разработки языка являются несхожие предпочтения конечных пользователей языка. Большинство новых языков тестируются пользователями еще во время разработки.
+
+В качестве респондентов было выбрано 16 человек, занимающихся тестированием программного обеспечения автомобильных систем в компании ООО ''Люксофт профешнл''. Респондентам был представлен пример тестового сценария, рассматриваемого в разделе \ref{lexer}. Их попросили ответить на вопрос ``Оцените степень удобства чтения приведенной ниже тестовой спецификации. Описывали бы вы по возможности тестовые сценарии подобным образом?''. Результаты опроса представлены на рисунке \ref{fig:Opros}.
+
+\begin{figure}[h!]
+\center{\includegraphics[width=\linewidth]{res/Opros}}
+\caption{Результаты опроса}
+\label{fig:Opros}
+\end{figure}
+
+По мнению 100\% респондентов, спецификации, описанные на разработанном языке достаточно понятны. При этом 13 из 18 опрошенных по возможности описывали бы тестовые сценарии на данном языке. 
+
+\section{Примеры применения разработанного языка}
+
+В качестве примера применения разработанного языка используем пример тестового сценария для проверки функционала для записи данных в энергонезависимую память, рассматриваемого в разделе \ref{lexer}. В качестве тестируемого оборудования использовался лидар. Тестовая спецификация представлена в листинге \ref{lst:FinalTestCaseExample}).
+
+\lstinputlisting[caption=Тестовая спецификация, language=java,  firstline=1,  lastline=10, , label={lst:FinalTestCaseExample} ]{res/FinalTestCaseExample.txt}
+
+Для данной тестовой спецификации необходимо в классе CommandLib.java определить методы, отвещающие за включение (ignitionOn) и выключение (ignitionOff) тестируемого железа, а так же отправление (sendRequest) и получение (recieveResponce) данных. Примеры реализации методом для отправки и получения данных по протоколу FlexRay представлены в листинге \ref{lst:finalTestCasLib}. 
+
+\lstinputlisting[caption=Реализация пользовательской библиотеки, language=java,  firstline=23,  lastline=31, label={lst:finalTestCasLib} ]{res/CommandLib.java}
+
+Результаты теста записанные в файл result.txt представлены в листинге \ref{lst:FinalTestResult}. Из данного файла видно, что ожидаемый ответ от тестируемого оборудования о том, что данные успешно записаны (62 F1 01) был получен. Однако после перезапуска тестируемого оборудования ожидаемый ответ (62 F1 01 00 01 A5) на запрос о прочтении данных не был получен. Вместо этого тестируемое оборудование отправило ответ (7F 22 31), означающий, что данный сервис не поддерживается в текущей сессии \cite {stUds}. 
+
+\lstinputlisting[caption=Реализация пользовательской библиотеки, language=java,  label={lst:FinalTestResult} ]{res/result.txt}
+
 
 \Chapter{Заключение }
 %Рекомендуемый объем --- 2--4 стр.
@@ -895,6 +921,10 @@ InstructionIsNotDeclared&Instruction 'request [] in functional addressing mode' 
 %новизне и практической ценности ВКР. Предложения по внедрению результатов,
 %перспективы продолжения работы
 
+В результате проведенной работы был разработан и реализован язык описания сценариев для тестирование программного обеспечения автомобильных систем. При этом позволяет пользователям описывать инструкции для тестовых сценариев в свободной форме. В одном документе можно описать несколько тестовых сценариев, выполняющихся пооцерено в той последовательности, в которой были указаны в тестовой спецификации. Данные, полученые в результате выполнения теста сохраняются  в отдельный файл. 
+
+
+По результатам опроса, проведенного среди опытных тестировщиков автомобильных систем выявлено, что разработанный язык мог бы использоваться на производстве. Однако очевидно, язык может быть улучшен. Для удобства использования разработанного языка в дальшейшем стоит изменить формат вывода результатов и представлять их в качестве таблицы, или же в каком-либо другом формате. Так же стоит реализовать графический интерфейс для удобства пользователей, в котором в режиме реального времени могли бы выводиться результаты тестового прогона. 
 
 %\addcontentsline{toc}{chapter}{bibname}
 \bibliographystyle{gost71s}
